small change of title

--- a/index.html
+++ b/index.html
@@ -114,23 +114,26 @@
     <div id="concept" class="step" data-x="-17000" data-y="100" data-z="-2000" data-scale="2" data-rotate="180">
         <p>Some concepts</p>
     </div>
-    <div id="pow" class="step" data-x="-16500" data-y="150" data-z="-2000" data-scale="0.05" data-rotate="180">
+    <div id="miner" class="step" data-x="-16500" data-y="150" data-z="-2000" data-scale="0.05" data-rotate="180">
+        <p>Miner</p>
+    </div>
+    <div id="pow" class="step" data-x="-17000" data-y="150" data-z="-2000" data-scale="0.05" data-rotate="180">
         <p>Proof of Work</p>
     </div>
-
 
     <div id="title3" class="step" data-x="-14000" data-y="1000" data-scale="4" data-rotate="180">
         <h1>How Blockchain Works?</h1>
     </div>
     <div id="title4" class="step" data-x="-20000" data-y="1000" data-scale="4" data-rotate="180">
-        <h1>What is DAO?</h1>
+        <h1>What is DAO(Distributed Autonomous Organization)?</h1>
     </div>
 
-    <div id="title4" class="step" data-x="-20000" data-y="1000" data-scale="4" data-rotate="180">
-        <h1>What is DAO?</h1>
-    </div>
     <div id="title5" class="step" data-x="-26000" data-y="1000" data-scale="4" data-rotate="180">
         <h1>Who Uses Blockchain?</h1>
+    </div>
+
+    <div id="pow" class="step" data-x="-17000" data-y="150" data-z="-2000" data-scale="0.05" data-rotate="180">
+        <p>Proof of Work</p>
     </div>
 
 
